# projectB

./: CMakeLists.txt  main.cpp
include/mathfunctions/: house.h
src/: CMakeLists.txt
src/mathfunctions/: CMakeLists.txt  house.cpp
tests/mathfunctions/: CMakeLists.txt  house_test.cpp
